Fix bug 968220 - expandable triangle overlaps menu item at narrow widths

--- a/site/app/assets/stylesheets/site/_core.scss
+++ b/site/app/assets/stylesheets/site/_core.scss
@@ -906,9 +906,6 @@ h1.ribbon {
 }
 
 @media (max-width: 768px) {
-  .column-nav .nav-list > li > a {
-    margin-left: 0;
-  }
   .column-floating {
     margin: 0;
     margin-left: 0;
